# vm-course_hw-2

./: .gitignore  00-smoke.bc  CMakeLists.txt  README.md  main.cpp
Lama/byterun/: byterun.c
Lama/src/: Language.ml
byterun/: byterun.c
runtime/: CMakeLists.txt  gc.c  runtime.c  runtime.h  vm.h
scripts/: afl_wrapper.py  common.py  make_afl_corpus.py  test.py  test_decompiler.py
tests/: 02-function.lama
